# fytok_old

./: .gitignore  .gitmodules  CMakeLists.txt  README.en.md  README.md  fytok-0.3.0-GCCcore-12.2.0-Python-3.10.8.eb  pyproject.toml  requirements.txt  setup.py  test.geqdsk
_setup_helper/: fy_imas_python.xsl
builder/: build_docx.py  create_fy_imas.py  create_ids_warpper.py  dd_3.38.1.patch  fy_ids.xsl  fy_imas.py  fy_imas.xsl  fy_imas_ids.py  fy_imas_xsd.xsl  generate_ids.ipynb  ids.py  test_imas.py
dev_tools/: create_ids.py  fy_ids.xsl  generate_ids.py  ids.txt  plasma.txt
docs/: .gitignore  APIReference.rst  Appendix.rst  Bibliography.rst  Changelog.rst  Design.md  Design.rst  Examples.rst  FUSION THERMAL REACTIVITIES.md  FyTok.bib  Installation.md  Installation.rst  Introduction.rst  Makefile  QuickStart.rst  Reference.rst  Requirements.rst  Requirements_IMAS.rst  Transport.md  UserGuide.rst  UserManual.md  common.rst  conf.py  fusion.ipynb  fytok.bib  fytok.uml  index.rst  requirements  requirements.txt  tips.md
easybuild/: fytok-0.3.0-GCCcore-12.2.0-Python-3.10.8.eb
examples/: Transport.ipynb  benchmark.ipynb  cfetr.ipynb  demo_core_trans_mode.py  demo_core_transport.py  demo_entry.py  demo_eq.ipynb  demo_eq.py  demo_equilibrium.ipynb  demo_equilibrium.py  demo_f2py.py  demo_fytok.py  demo_genric.py  demo_geqdsk.py  demo_glf23.py  demo_magnetic.py  demo_mapping.ipynb  demo_module.py  demo_nclass.py  demo_species.py  demo_tokamak.ipynb  demo_tokamak.py  demo_tokamak_DT_burning.py  demo_tokamak_device.py  demo_tokamak_eq.py  demo_trans_solver.py  fenics.ipynb  (+21 more)
(+1125 files in other folders)
