[project]
name = "fytok"

version = "0.3.0"

readme = "README.md"

license = { file = "LICENSE.txt" }


description = "Tokamak integrated modeling and analysis toolkit."

classifiers = [
    "Development Status :: 0 - Beta",
    "Intended Audience :: Plasma Physicists",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]

requires-python = ">=3.10"

dependencies = ["spdb"]

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]

exclude = ["*.obsolete", "*.obsolete.*", "*.todo", "*.todo.*"]

namespaces = true

[tool.setuptools.package-data]
"*" = ["*.xml"]


[build-system]
requires = ["setuptools>=61.0"]
